--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 		<link rel="icon" href="/portfolio/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/portfolio/_app/immutable/entry/start.lgtx3kcF.js">
-		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/DQx-q-CR.js">
+		<link rel="modulepreload" href="/portfolio/_app/immutable/entry/start.D0NY5-GM.js">
+		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/DbDBBGay.js">
 		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/CNFGUFrx.js">
 		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/CypYxLut.js">
 		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/aeVKXP2N.js">
-		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/DQzAX9oS.js">
-		<link rel="modulepreload" href="/portfolio/_app/immutable/entry/app.fouBL2tB.js">
+		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/DGTtJ5N8.js">
+		<link rel="modulepreload" href="/portfolio/_app/immutable/entry/app.BEDtv5IQ.js">
 		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/CHXrQtpw.js">
 		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/DeiEbtB7.js">
 		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/CicmKuaS.js">
@@ -21,7 +21,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_h2tjw5 = {
+					__sveltekit_1laxzsm = {
 						base: "/portfolio",
 						assets: "/portfolio"
 					};
@@ -29,8 +29,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/portfolio/_app/immutable/entry/start.lgtx3kcF.js"),
-						import("/portfolio/_app/immutable/entry/app.fouBL2tB.js")
+						import("/portfolio/_app/immutable/entry/start.D0NY5-GM.js"),
+						import("/portfolio/_app/immutable/entry/app.BEDtv5IQ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
