deploy: 3625eb3e50503e2122543fcc234e22a3e291ad42

--- a/index.html
+++ b/index.html
@@ -5,23 +5,22 @@
 		<link rel="icon" href="/portfolio/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/portfolio/_app/immutable/entry/start.D0NY5-GM.js">
-		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/DbDBBGay.js">
-		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/CNFGUFrx.js">
-		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/CypYxLut.js">
-		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/aeVKXP2N.js">
-		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/DGTtJ5N8.js">
-		<link rel="modulepreload" href="/portfolio/_app/immutable/entry/app.BEDtv5IQ.js">
-		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/CHXrQtpw.js">
-		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/DeiEbtB7.js">
-		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/CicmKuaS.js">
-		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/Xts7KaKn.js">
+		<link rel="modulepreload" href="/portfolio/_app/immutable/entry/start.DHk9cAj5.js">
+		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/DVrFLebi.js">
+		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/Bi5AYuQg.js">
+		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/DfgW1blC.js">
+		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/BBezLVAC.js">
+		<link rel="modulepreload" href="/portfolio/_app/immutable/entry/app.BHW3sN60.js">
+		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/09MmZEke.js">
+		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/DetTuUS3.js">
+		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/CKbOicPw.js">
+		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/DMVvOQ-M.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1laxzsm = {
+					__sveltekit_18kyrnb = {
 						base: "/portfolio",
 						assets: "/portfolio"
 					};
@@ -29,8 +28,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/portfolio/_app/immutable/entry/start.D0NY5-GM.js"),
-						import("/portfolio/_app/immutable/entry/app.BEDtv5IQ.js")
+						import("/portfolio/_app/immutable/entry/start.DHk9cAj5.js"),
+						import("/portfolio/_app/immutable/entry/app.BHW3sN60.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
