--- a/index.html
+++ b/index.html
@@ -2,34 +2,32 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/portfolio/favicon.png" />
+		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/portfolio/_app/immutable/entry/start.DHk9cAj5.js">
-		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/DVrFLebi.js">
-		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/Bi5AYuQg.js">
-		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/DfgW1blC.js">
-		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/BBezLVAC.js">
-		<link rel="modulepreload" href="/portfolio/_app/immutable/entry/app.BHW3sN60.js">
-		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/09MmZEke.js">
-		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/DetTuUS3.js">
-		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/CKbOicPw.js">
-		<link rel="modulepreload" href="/portfolio/_app/immutable/chunks/DMVvOQ-M.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.ChNox-Xj.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DqptsEe4.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Bi5AYuQg.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DfgW1blC.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DXs6wfwK.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/09MmZEke.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DetTuUS3.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CKbOicPw.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DMVvOQ-M.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_18kyrnb = {
-						base: "/portfolio",
-						assets: "/portfolio"
+					__sveltekit_92jdo9 = {
+						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/portfolio/_app/immutable/entry/start.DHk9cAj5.js"),
-						import("/portfolio/_app/immutable/entry/app.BHW3sN60.js")
+						import("/_app/immutable/entry/start.ChNox-Xj.js"),
+						import("/_app/immutable/entry/app.DXs6wfwK.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
