deploy: a58335fcebb84a9deffd8976fceb46763b33515f

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.ChNox-Xj.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DqptsEe4.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.e7_TRebS.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BYAMVZQC.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Bi5AYuQg.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DfgW1blC.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DXs6wfwK.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DVsk3fLY.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BurCnYSB.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/09MmZEke.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DetTuUS3.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CKbOicPw.js">
@@ -19,15 +20,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_92jdo9 = {
+					__sveltekit_1ehhymz = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.ChNox-Xj.js"),
-						import("/_app/immutable/entry/app.DXs6wfwK.js")
+						import("/_app/immutable/entry/start.e7_TRebS.js"),
+						import("/_app/immutable/entry/app.BurCnYSB.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
