deploy: 2f638e2ec4097610b68bd680b782561af800c172

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.e7_TRebS.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BYAMVZQC.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.Dqd_bAW_.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DZq6ypf6.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Bi5AYuQg.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DfgW1blC.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DVsk3fLY.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BurCnYSB.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/9aRayQmt.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.n86Ow7io.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/09MmZEke.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DetTuUS3.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CKbOicPw.js">
@@ -20,15 +20,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1ehhymz = {
+					__sveltekit_1lhlvkm = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.e7_TRebS.js"),
-						import("/_app/immutable/entry/app.BurCnYSB.js")
+						import("/_app/immutable/entry/start.Dqd_bAW_.js"),
+						import("/_app/immutable/entry/app.n86Ow7io.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
