deploy: 002b1570e75c1f6072c67afdb6244954ca30c8ff

--- a/about.html
+++ b/about.html
@@ -8,22 +8,22 @@
 		<link href="./_app/immutable/assets/Ink.BdGqsut2.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/0.B7h1Ll28.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.CNCsE8u1.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.W5ya7snG.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/8UE9e7Wn.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DgFTO0au.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/AteHYBJl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Bi5AYuQg.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DfgW1blC.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CPttaOEc.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CJjivv3B.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/C9LA2AtP.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Di7oiBQp.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/09MmZEke.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DetTuUS3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CKbOicPw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DMVvOQ-M.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DeozDBEl.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BBFzC6Ax.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/G2Wd7ssI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DX-QZS6v.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BhNITujh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BuWt9qd9.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/B7yrF-n7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/yEMswjOH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/i0rtFsM_.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/0X0q5MLt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BgIK_w-T.js">
@@ -40,15 +40,15 @@ Tu connais la personne, voici le pro.</p><!--]--></div></div><!----><!----></mai
 			
 			<script>
 				{
-					__sveltekit_1olou2i = {
+					__sveltekit_1i4w87z = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.W5ya7snG.js"),
-						import("./_app/immutable/entry/app.CJjivv3B.js")
+						import("./_app/immutable/entry/start.DgFTO0au.js"),
+						import("./_app/immutable/entry/app.Di7oiBQp.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
