--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.W5ya7snG.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/8UE9e7Wn.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DgFTO0au.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/AteHYBJl.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Bi5AYuQg.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DfgW1blC.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CPttaOEc.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CJjivv3B.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/C9LA2AtP.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Di7oiBQp.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/09MmZEke.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DetTuUS3.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CKbOicPw.js">
@@ -20,15 +20,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1olou2i = {
+					__sveltekit_1i4w87z = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.W5ya7snG.js"),
-						import("/_app/immutable/entry/app.CJjivv3B.js")
+						import("/_app/immutable/entry/start.DgFTO0au.js"),
+						import("/_app/immutable/entry/app.Di7oiBQp.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
