deploy: 31458dc1f8b39aa6d907ca1c2b338fb609fc193b

--- a/index.html
+++ b/index.html
@@ -5,30 +5,30 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BxFAFSDA.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DOiNAyEE.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/lFoau40X.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CjEnCT16.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BUStfwrt.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.ChQUUfAM.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DoufeXuH.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BZAkiVTB.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BxsE7mvB.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/B6H8aCwj.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BPxGevNf.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CMEs0ki7.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/ChJ8XQc5.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DDiZIyLU.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/RUyDsiyK.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.C3okVD4E.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/B1lR_Hjz.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/KkcP3mef.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Cr_ObD1F.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BsIxb4Y8.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_14xpxu9 = {
+					__sveltekit_1lszihh = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BxFAFSDA.js"),
-						import("/_app/immutable/entry/app.ChQUUfAM.js")
+						import("/_app/immutable/entry/start.BPxGevNf.js"),
+						import("/_app/immutable/entry/app.C3okVD4E.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
