--- a/index.html
+++ b/index.html
@@ -5,30 +5,30 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BPxGevNf.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CMEs0ki7.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/ChJ8XQc5.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DDiZIyLU.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/RUyDsiyK.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.C3okVD4E.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/B1lR_Hjz.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/KkcP3mef.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Cr_ObD1F.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BsIxb4Y8.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BRXTivjw.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CjYs5Dzo.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/ofRx181H.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BBN7SMB5.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/aoIvyrCV.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.035enEro.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BosGPWuw.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/MIJ1GrrC.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CmGb4vL7.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/C90nEfq9.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1lszihh = {
+					__sveltekit_l85xg0 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BPxGevNf.js"),
-						import("/_app/immutable/entry/app.C3okVD4E.js")
+						import("/_app/immutable/entry/start.BRXTivjw.js"),
+						import("/_app/immutable/entry/app.035enEro.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
