--- a/index.html
+++ b/index.html
@@ -5,30 +5,30 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BRXTivjw.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CjYs5Dzo.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/ofRx181H.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.Ckc24deR.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BSfmmGx_.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Cm-xGICo.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BBN7SMB5.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/aoIvyrCV.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.035enEro.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DRVTo-FA.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Bpwrj2QB.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BosGPWuw.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/MIJ1GrrC.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CmGb4vL7.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/z1yrWKYM.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/C90nEfq9.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_l85xg0 = {
+					__sveltekit_oh4ryy = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BRXTivjw.js"),
-						import("/_app/immutable/entry/app.035enEro.js")
+						import("/_app/immutable/entry/start.Ckc24deR.js"),
+						import("/_app/immutable/entry/app.Bpwrj2QB.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
