deploy: 4ab33d2134331394c5e80a40b6750cdcb4ef0360

--- a/about.html
+++ b/about.html
@@ -8,21 +8,21 @@
 		<link href="./_app/immutable/assets/Ink.D6Z4RAsE.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/0.D2SpvLnJ.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.DYaGKNMX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Ckc24deR.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BSfmmGx_.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.ojIofDcM.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Ddrn2PCy.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Cm-xGICo.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BBN7SMB5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DRVTo-FA.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Bpwrj2QB.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/ChFf-0Rw.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Ufm4Ez40.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BosGPWuw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/MIJ1GrrC.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/z1yrWKYM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C90nEfq9.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BPUZoq0H.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CNmgmAdZ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/-jUS7NNq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/ym-WVH5r.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/vc5LlQva.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CviKz_YE.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BaW6f78Y.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DTggPlJ5.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.CSOk85-4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/kZ8ecvk-.js">
@@ -39,15 +39,15 @@ Tu connais la personne, voici le pro.</p><!--]--></div></div></div><!----><!----
 			
 			<script>
 				{
-					__sveltekit_oh4ryy = {
+					__sveltekit_ms4e1n = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Ckc24deR.js"),
-						import("./_app/immutable/entry/app.Bpwrj2QB.js")
+						import("./_app/immutable/entry/start.ojIofDcM.js"),
+						import("./_app/immutable/entry/app.Ufm4Ez40.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
