--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Ckc24deR.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BSfmmGx_.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.ojIofDcM.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Ddrn2PCy.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Cm-xGICo.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BBN7SMB5.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DRVTo-FA.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Bpwrj2QB.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/ChFf-0Rw.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Ufm4Ez40.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BosGPWuw.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/MIJ1GrrC.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/z1yrWKYM.js">
@@ -20,15 +20,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_oh4ryy = {
+					__sveltekit_ms4e1n = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Ckc24deR.js"),
-						import("/_app/immutable/entry/app.Bpwrj2QB.js")
+						import("/_app/immutable/entry/start.ojIofDcM.js"),
+						import("/_app/immutable/entry/app.Ufm4Ez40.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
