--- a/index.html
+++ b/index.html
@@ -5,30 +5,30 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.ojIofDcM.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Ddrn2PCy.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Cm-xGICo.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BBN7SMB5.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/ChFf-0Rw.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Ufm4Ez40.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BosGPWuw.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/MIJ1GrrC.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/z1yrWKYM.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/C90nEfq9.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DaNlsQrj.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/B3wj89j0.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/B2BlJhtD.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CI3x-8Hx.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DPcH_Xgg.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.MldEMfFl.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/phfNJlXe.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DxBy6fyQ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BMR7Ha02.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CNH9V4ki.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_ms4e1n = {
+					__sveltekit_upqwn1 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.ojIofDcM.js"),
-						import("/_app/immutable/entry/app.Ufm4Ez40.js")
+						import("/_app/immutable/entry/start.DaNlsQrj.js"),
+						import("/_app/immutable/entry/app.MldEMfFl.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
