deploy: 864f79e90e82acadcfe0a71074c0c882dcd8957b

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DaNlsQrj.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/B3wj89j0.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DOSdWDJT.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BNWGsPwn.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/B2BlJhtD.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CI3x-8Hx.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DPcH_Xgg.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.MldEMfFl.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BRAEXIMX.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.1bffyPsm.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/phfNJlXe.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DxBy6fyQ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BMR7Ha02.js">
@@ -20,15 +20,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_upqwn1 = {
+					__sveltekit_1n9121n = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DaNlsQrj.js"),
-						import("/_app/immutable/entry/app.MldEMfFl.js")
+						import("/_app/immutable/entry/start.DOSdWDJT.js"),
+						import("/_app/immutable/entry/app.1bffyPsm.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
