deploy: 83189c9f9f669dcebaece9190e9b8e03c4d5aafc

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start._2ztxYZp.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DDm4djuS.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BrgnbeXR.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CV0xB-xT.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/B2BlJhtD.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CI3x-8Hx.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BkzG1KFD.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CoigC8TV.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DzzsE9B0.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BQY8Ue8d.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/phfNJlXe.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DxBy6fyQ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BMR7Ha02.js">
@@ -20,15 +20,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_npidb0 = {
+					__sveltekit_o4jygp = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start._2ztxYZp.js"),
-						import("/_app/immutable/entry/app.CoigC8TV.js")
+						import("/_app/immutable/entry/start.BrgnbeXR.js"),
+						import("/_app/immutable/entry/app.BQY8Ue8d.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
