deploy: 32a232b9dc28c1ea1258c7598796cd369dc66570

--- a/index.html
+++ b/index.html
@@ -5,30 +5,29 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BrgnbeXR.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CV0xB-xT.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/B2BlJhtD.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CI3x-8Hx.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DzzsE9B0.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BQY8Ue8d.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/phfNJlXe.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DxBy6fyQ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BMR7Ha02.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CNH9V4ki.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.e5hw8owE.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/PR7WmEYS.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BIkKN8BR.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CL4utd2P.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DL8sMR2u.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CiYr0ks2.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/NZTpNUN0.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DOIZ27NJ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/nYXw4_ly.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_o4jygp = {
+					__sveltekit_z68n68 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BrgnbeXR.js"),
-						import("/_app/immutable/entry/app.BQY8Ue8d.js")
+						import("/_app/immutable/entry/start.e5hw8owE.js"),
+						import("/_app/immutable/entry/app.CiYr0ks2.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
